fixed z-index issue when closing out vendor profile

--- a/rollio-react/src/scss/components/_vendorprofile.scss
+++ b/rollio-react/src/scss/components/_vendorprofile.scss
@@ -20,6 +20,7 @@
             width: $vendor-menu-width;
             transform: translateX(-100%);
             transition: transform .2s ease-out;
+            z-index: 2;
             // display: none;
         }
     }
@@ -168,6 +169,7 @@
             @extend .vendorprofile__wrapper_hidden;
             width: 100%;
             position: absolute;
+            z-index: 2;
         }
     }
 }
